--- a/static/admin_dash.css
+++ b/static/admin_dash.css
@@ -1,15 +1,19 @@
-body{
+html, body {
+    height: 100%;
     background: linear-gradient(135deg, #dbeafe, #ecf2fa);
     font-family: 'Poppins', sans-serif;
     margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
 .navbar{
-    background: linear-gradient(to right,rgb(0, 74, 158),rgb(60, 143, 216));
+    background: linear-gradient(135deg, #4361ee, #3f37c9);
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
     padding: 10px 20px;
-    transition: all 0.3s ease-in-out;
+    
 }
+
 
 .navbar-brand{
     font-size: 20px;
@@ -20,17 +24,17 @@ body{
 .navbar a{
     color: white;
     font-weight: bold;
-    transition: color 0.3s ease-in-out;
+    transition: color 0.25s ease-in-out;
 }
 
 .navbar a:hover{
-    color: rgb(0, 29, 91);
+    color: #dbeafe;
 }
 
 .dash-header{
     background-color: white;
     padding: 15px 20px;
-    border-radius: 12px;
+    border-radius: 20px;
     box-shadow: 0px 4px 12px rgb(0, 0, 0, 0.2);
     display: flex;
     justify-content: space-between;
@@ -46,18 +50,57 @@ body{
 
 .dash-header .form-control:focus,
 .dash-header .from-select:focus {
-    border-color: #167be8;
-    box-shadow: 0px 0px 8px rgba(19, 121, 230, 0.4);
+    border-color: #3f37c9;
+    box-shadow: 0px 0px 8px rgba(67, 97, 238, 0.4);
 }
+
 
 .card {
     background: white;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    border-radius: 20px;
+     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 .card:hover {
     transform: translateY(-4px);
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.btn-primary, .btn-success {
+    background: linear-gradient(135deg, #4361ee, #3f37c9) !important;
+    border: none;
+    border-radius: 10px;
+    font-weight: 600;
+    transition: all 0.2s ease-in-out;
+}
+
+.btn-outline-dark, .btn-outline-danger{
+    transition: all 0.2s ease-in-out;
+}
+
+.btn-primary:hover, .btn-success:hover {
+    background: linear-gradient(135deg, #3e5bd9, #342ea7) !important;
+    transform: scale(1.01);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.btn-outline-dark:hover, .btn-outline-danger:hover {
+    transform: scale(1.01);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+
+.custom-header {
+    background: linear-gradient(to bottom, #4361ee, #3f37c9); 
+    font-weight: 600;
+    padding: 12px;
+    
+}
+html, body {
+    height: 100%;
+}
+
+.shadow{
+    overflow-x: hidden;
 }
