--- a/templates/admin_dash.html
+++ b/templates/admin_dash.html
@@ -2,49 +2,58 @@
 <html>
 <head>
     <title>Admin Dashboard</title>
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/admin_dash.css">
+    
 
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <h6 class="navbar-brand text-white mt-2 " >Admin Dashboard</h6>
+            <h6 class="navbar-brand text-white mt-2 ">Admin Dashboard</h6>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="/admin">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="/users_manage">Users</a></li>
                     <li class="nav-item"><a class="nav-link" href="/admin/summary">Summary</a></li>
-                    <li class="nav-item"><a class="nav-link " href="/login">Logout</a></li>
+                    <li class="nav-item"><a class="nav-link " href="/logout">Logout</a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <div class="container mt-4">
         <div class="dash-header d-flex justify-content-between align-items-center p-3 border-buttom">
-            <form action="/admin/search" >
-            <input type="text" class="form-control rounded-pill" placeholder="Search" name="search">
-            <select name="option"  class="form-select w-auto rounded-pill">
-                <option selected>Select</option>
-                <option value="user">User</option>
-                <option value="sub">Subject</option>
-                <option value="chap">Chapter</option>
-                <option value="quiz">Quiz</option>
+            <form action="/admin/search" class="d-flex align-items-center gap-2">
+                <input type="text" class="form-control rounded-pill" placeholder="Search" name="search" value="{{ search or '' }}">
+                
+                <select name="option" class="form-select w-auto rounded-pill">
+                    <option disabled {% if not option %}selected{% endif %}>Select</option>
+                    <option value="user" {% if option == "user" %}selected{% endif %}>User</option>
+                    <option value="sub" {% if option == "sub" %}selected{% endif %}>Subject</option>
+                    <option value="chap" {% if option == "chap" %}selected{% endif %}>Chapter</option>
+                    <option value="quiz" {% if option == "quiz" %}selected{% endif %}>Quiz</option>
+                </select>
+            
                 <input type="submit" value="Search" class="btn btn-outline-success rounded-pill px-4">
-            </select>
+                {% if search %}
+                <a href="/admin" class="btn btn-outline-danger rounded-pill px-4">Clear</a>
+                {% endif %}
             </form>
+            
             <span class="fw-bold text-primary">Welcome {{my_user.username}}</span>
         </div>
 
-        <div class="overflow-auto mt-3" style="max-height: 545px;">
+        <div class="overflow-auto mt-3" style="max-height: 516px;">
+            {% if subjects %}
             <div class="row mt-4 ">
                 {%for subject in subjects %}
-                <div class="col-md-6 mb-3">
+                <div class="col-md-6 mb-4">
                     <a href="{{ url_for('view_chapters',sub_id=subject.sub_id) }}" class="text-decoration-none text-dark">
                     <div class="card p-3">
                         <h5 class="text-center">{{subject.sub_name}}</h5>
                         <div class="overflow-auto " style="max-height: 140px;">
-                            <table class="table">
+                            <table class="table ">
                                 <thead>
                                     <tr class="text-center">
                                         <th>Chapter Name</th>
@@ -66,7 +75,7 @@
                                 </tbody>
                             </table>
                         </div>
-                        <a href="{{ url_for('add_chap', sub_id = subject.sub_id)}}" class="btn btn-primary bg-gradient py-2">+ Add Chapter</a>
+                        <a href="{{ url_for('add_chap', sub_id = subject.sub_id)}}" class="btn btn-primary bg-gradient py-2">New Chapter</a>
                         <div class="d-flex mt-2 justify-content-around">
                             <a href="/edit_sub/{{ subject.sub_id }}" class="btn btn-outline-dark ">
                                 <span>Edit Subject</span>
@@ -80,13 +89,21 @@
                 </div>
                 {% endfor %}
             </div>
+            {% else %}
+                {% if search %}
+                <h4 class="text-center text-danger mt-5">No Subjects matched your search. Try checking for typos or using simpler keywords.</h4>
+                {% else %}
+                <h4 class="text-center text-danger mt-5" >No Subjects available.</h4>
+                {% endif %}
+            {% endif %}
         </div>
         
-
+        {% if not search %}
         <div class="d-flex justify-content-center align-items-center mt-3  gap-4">
             <a href="/add_sub" class="btn btn-success d-flex align-items-center bg-gradient px-4 py-2 mb-4">
-                <span>Add Subject</span>
+                <span>New Subject</span>
             </a>
+        {% endif %}
             
            
         </div>
