--- a/templates/admin_search.html
+++ b/templates/admin_search.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Search</title>
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/admin_dash.css">
 </head>
@@ -11,10 +12,10 @@
             <h6 class="navbar-brand text-white mt-2 " >Search</h6>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="/home/{{ my_user.username }}/{{ my_user.id }}">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/admin">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="/users_manage">Users</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Summary</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/login">Logout</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/admin/summary">Summary</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
                 </ul>
             </div>
         </div>
@@ -28,30 +29,30 @@
                     <thead >
                         {% if option == 'user' %}
                             <tr>
-                                <th class="rounded-start bg-primary bg-gradient text-white">ID</th>
-                                <th class="bg-primary bg-gradient text-white">Username</th>
-                                <th class="bg-primary bg-gradient text-white">Email</th>
-                                <th class="rounded-end bg-primary bg-gradient text-white">Full Name</th>
+                                <th class="rounded-start custom-header text-white">ID</th>
+                                <th class="custom-header text-white">Username</th>
+                                <th class="custom-header text-white">Email</th>
+                                <th class="rounded-end custom-header text-white">Full Name</th>
                             </tr>
                         {% elif option == 'sub' %}
                             <tr>
-                                <th class="rounded-start bg-primary bg-gradient text-white">ID</th>
-                                <th class="bg-primary bg-gradient text-white">Subject Name</th>
-                                <th class="rounded-end bg-primary bg-gradient text-white">Description</th>
+                                <th class="rounded-start custom-header text-white">ID</th>
+                                <th class="custom-header text-white">Subject Name</th>
+                                <th class="rounded-end custom-header text-white">Description</th>
                             </tr>
                         {% elif option == 'chap' %}
                             <tr>
-                                <th class="rounded-start bg-primary bg-gradient text-white">ID</th>
-                                <th class="bg-primary bg-gradient text-white">Chapter Name</th>
-                                <th class="bg-primary bg-gradient text-white">Description</th>
-                                <th class="rounded-end bg-primary bg-gradient text-white">Subject Name</th>
+                                <th class="rounded-start custom-header text-white">ID</th>
+                                <th class="custom-header text-white">Chapter Name</th>
+                                <th class="custom-header text-white">Description</th>
+                                <th class="rounded-end custom-header text-white">Subject Name</th>
                             </tr>
                         {% elif option == 'quiz' %}
                             <tr>
-                                <th class="rounded-start bg-primary bg-gradient text-white">ID</th>
-                                <th class="bg-primary bg-gradient text-white">Quiz Name</th>
-                                <th class="rounded-end bg-primary bg-gradient text-white">Date</th>
-                                <th class="rounded-end bg-primary bg-gradient text-white">Duration</th>
+                                <th class="rounded-start custom-header text-white">ID</th>
+                                <th class="custom-header text-white">Quiz Name</th>
+                                <th class="rounded-end custom-header text-white">Date</th>
+                                <th class="rounded-end custom-header text-white">Duration</th>
                             </tr>
                         {% endif %}
                     </thead>
