--- a/templates/n_exists.html
+++ b/templates/n_exists.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <title>Not exists</title>
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <style >
         body{
-            background: linear-gradient(135deg, #dbeafe, #ecf2fa);
+            background: linear-gradient(135deg, rgba(47, 47, 162, 0.9), rgba(76, 76, 255, 0.9));
             font-family: 'Poppins', sans-serif;
             display: flex;
             justify-content: center;
@@ -38,15 +39,57 @@
             box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
         }
         
+
+        .bubble-bg {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            overflow: hidden;
+        }
+        
+        .bubble {
+            position: absolute;
+            bottom: -100px;
+            border-radius: 50%;
+            animation: float 15s infinite ease-in;
+            opacity: 0;
+            z-index: -1;
+        }
+        
+        @keyframes float {
+            0% {
+                transform: translateY(0) rotate(0deg);
+                opacity: 0.5;
+                bottom: -100px;
+            }
+            50% {
+                opacity: 0.7;
+            }
+            100% {
+                transform: translateY(-1000px) rotate(720deg);
+                opacity: 0;
+                bottom: 100%;
+            }
+        }
     
         
     </style> 
 </head>
 <body>
+    <div class="bubble-bg" id="bubble-bg"></div>
+
+
     <div class="container  card">
         <h1>User does not Exists!</h1>
         <h5><a href="/register" class="btn btn-dark bg-gradient px-4 py-2">Create new User?</a></h5>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="/static/bubbles.js"></script>
 
 </body>
 </html>
