--- a/templates/no_ques.html
+++ b/templates/no_ques.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>NO questions avalable</title>
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/admin_dash.css">
 </head>
