--- a/templates/quiz_manage.html
+++ b/templates/quiz_manage.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Quiz Management</title>
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/admin_dash.css">
 
@@ -15,66 +16,87 @@
                     <li class="nav-item"><a class="nav-link" href="/admin">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="/users_manage">Users</a></li>
                     <li class="nav-item"><a class="nav-link" href="/admin/summary">Summary</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/login">Logout</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <div class="container mt-4">
         <div class="dash-header d-flex justify-content-between align-items-center p-3 border-buttom">
-            <form action="/admin/search" >
-            <input type="text" class="form-control rounded-pill" placeholder="Search" name="search">
-            <select name="option"  class="form-select w-auto rounded-pill">
-                <option selected>Select</option>
-                <option value="user">User</option>
-                <option value="sub">Subject</option>
-                <option value="chap">Chapter</option>
-                <option value="quiz">Quiz</option>
+            <form action="/admin/search" class="d-flex align-items-center gap-2">
+                <input type="text" class="form-control rounded-pill" placeholder="Search" name="search" value="{{ search or '' }}">
+                
+                <select name="option" class="form-select w-auto rounded-pill">
+                    <option disabled {% if not option %}selected{% endif %}>Select</option>
+                    <option value="user" {% if option == "user" %}selected{% endif %}>User</option>
+                    <option value="sub" {% if option == "sub" %}selected{% endif %}>Subject</option>
+                    <option value="chap" {% if option == "chap" %}selected{% endif %}>Chapter</option>
+                    <option value="quiz" {% if option == "quiz" %}selected{% endif %}>Quiz</option>
+                </select>
+            
                 <input type="submit" value="Search" class="btn btn-outline-success rounded-pill px-4">
-            </select>
+                {% if search %}
+                <a href="/admin" class="btn btn-outline-danger rounded-pill px-4">Clear</a>
+                {% endif %}
             </form>
             <span class="fw-bold text-primary">Welcome {{my_user.username}}</span>
         </div>
         <div class="overflow-auto mt-3" style="max-height: 545px;">
-            <div class="row mt-4">
-                {% for quiz in quizzes %}
-                <div class="col-md-6 mb-3">
-                    <div class="card p-3">
-                        <h5 class="text-center">{{ quiz.quiz_name}}</h5>
-                        <div class="overflow-auto" style="max-height: 140px;">
-                            <table class="table">
-                                <thead>
-                                    <tr class="text-center">
-                                        <th>Q_ID</th>
-                                        <th>Q_Title</th>
-                                        <th>Action</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    {% for question in quiz.questions %}
-                                    <tr class="text-center">
-                                        <td>{{ question.ques_id }}</td>
-                                        <td>{{ question.ques_title }}</td>
-                                        <td><a class="btn btn-sm btn-outline-dark" href="/edit_ques/{{ quiz.quiz_id }}/{{ question.ques_id}}">Edit</a> 
-                                            <a class="btn btn-sm btn-outline-danger" href="/delete_ques/{{ quiz.quiz_id }}/{{ question.ques_id }}">Delete</a></td>
-                                    </tr>
-                                    {% endfor %}
-                                </tbody>
-                            </table>
-                        </div>    
-                        <a href="{{ url_for('add_ques', quiz_id=quiz.quiz_id)}}" class="btn btn-primary bg-gradient py-2">New Question</a>
+            {% if quizzes %}
+                <div class="row mt-4">
+                    {% for quiz in quizzes %}
+                    <div class="col-md-6 mb-3">
+                        <div class="card p-3">
+                            <h5 class="text-center">{{ quiz.quiz_name}}</h5>
+                            <div class="overflow-auto" style="max-height: 140px;">
+                                <table class="table">
+                                    <thead>
+                                        <tr class="text-center">
+                                            <th>Q_ID</th>
+                                            <th>Q_Title</th>
+                                            <th>Action</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% for question in quiz.questions %}
+                                        <tr class="text-center">
+                                            <td>{{ question.ques_id }}</td>
+                                            <td>{{ question.ques_title }}</td>
+                                            <td><a class="btn btn-sm btn-outline-dark" href="/edit_ques/{{ quiz.quiz_id }}/{{ question.ques_id}}">Edit</a> 
+                                                <a class="btn btn-sm btn-outline-danger" href="/delete_ques/{{ quiz.quiz_id }}/{{ question.ques_id }}">Delete</a></td>
+                                        </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>    
+                            <a href="{{ url_for('add_ques', quiz_id=quiz.quiz_id)}}" class="btn btn-primary bg-gradient py-2">New Question</a>
+                        </div>
                     </div>
+                    {% endfor %}
                 </div>
-                {% endfor %}
-
 
                 
-                
-            </div>
+
+            {% else %}
+                {% if search %}
+                        <h4 class="text-center text-danger mt-5">No Quizzes matched your search. Try checking for typos or using simpler keywords.</h4>
+                {% else %}
+                        <h4 class="text-center text-danger mt-5" >No Quiz available.</h4>
+                {% endif %}
+            {% endif %}                    
+            
         </div>
-        <div>
-            <h4 class="text-center mt-4 text-primary">All the quizes here...</h4>
-        </div>
+        {% if quizzes %}
+            {% if search %}
+                <div>
+                    <h4 class="text-center mt-4 text-primary">All the searched quizes here...</h4>
+                </div>
+            {% else %}
+                <div>
+                    <h4 class="text-center mt-4 text-primary">All the quizes here...</h4>
+                </div>
+            {% endif %}
+        {% endif %}
 
         
     </div>
