--- a/templates/quiz_ns.html
+++ b/templates/quiz_ns.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Quiz not available</title>
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/admin_dash.css">
 </head>
@@ -13,8 +14,8 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="/home/{{ my_user.username }}/{{ my_user.id }}">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="/{{ my_user.username }}/{{ my_user.id }}/scores">Scores</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Summary</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/login">Logout</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ my_user.username }}/summary">Summary</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
                 </ul>
             </div>
         </div>
