--- a/templates/results.html
+++ b/templates/results.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Quiz Result</title>
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/admin_dash.css">
 </head>
@@ -12,13 +13,14 @@
     </script>
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <h6 class="navbar-brand text-white mt-2 " >Quiz Results</h6>
+            <h6 class="navbar-brand text-white mt-2">Quiz Results</h6>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="/home/{{ my_user.username }}/{{ my_user.id }}">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="/{{ my_user.username }}/{{ my_user.id }}/scores">Scores</a></li>
                     <li class="nav-item"><a class="nav-link" href="/{{ my_user.username }}/summary">Summary</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/login">Logout</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/edit_user/{{ my_user.id }}">Edit Profile</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
                 </ul>
             </div>
         </div>
@@ -28,22 +30,29 @@
         
         <div class="card p-3 mt-4">
             <h4 class="text-center mb-4">Quiz Result</h4>
-            <h5 class="text-center">Your Score: <strong>{{ score }} / {{ questions|length }}</strong></h5>
+            <h5 class="text-center">Your Score: <strong>{{ score }} %</strong></h5>
             <hr>
             <div class="overflow-auto" style="max-height: 450px;">
                 {% for question in questions %}
-                <div class="mb-4">
-                    <p><strong>Q{{ loop.index }}: {{ question.ques_text }}</strong></p>
-                    <p class="text-success">Correct Answer: {{ question.correct_answer }}</p>
-                    <p class="text-{% if user_ans[question.ques_id] == question.correct_answer %}success{% else %}danger{% endif %}">
-                        Your Answer: {{ user_ans.get(question.ques_id, 'Not Answered')}}
-                    </p>
-                </div>
-                <hr>
-                {%endfor %}
+                    {% set answer = (answers | selectattr('question_id', 'equalto', question.ques_id) | list | first) %}
+                    <div class="mb-4">
+                        <p><strong>Q{{ loop.index }}: {{ question.ques_text }}</strong></p>
+                        <p class="text-success">Correct Answer: {{ question.correct_answer }}</p>
+
+                        {% if answer %}
+                            <p class="text-{% if answer.is_correct %}success{% else %}danger{% endif %}">
+                                Your Answer: {{ answer.selected_option }}
+                            </p>
+                        {% else %}
+                            <p class="text-warning">Your Answer: Not Answered</p>
+                        {% endif %}
+                    </div>
+                    <hr>
+                {% endfor %}
+
             </div>
         </div >
-        <div class="text-center mt-4"><a href="/home/{{ my_user.username }}/{{ my_user.id }}" class="btn btn-outline-danger">Back to Dashboard</a></div>
+        <div class="text-center mt-4 mb-3"><a href="/home/{{ my_user.username }}/{{ my_user.id }}" class="btn btn-outline-danger ">Back to Dashboard</a></div>
     </div>
 </body>
 </html>
