--- a/templates/scores.html
+++ b/templates/scores.html
@@ -2,8 +2,10 @@
 <html>
 <head>
     <title>Scores</title>
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/admin_dash.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     
 </head>
 <body>
@@ -17,7 +19,8 @@
                     <li class="nav-item"><a class="nav-link" href="/home/{{ my_user.username }}/{{ my_user.id }}">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="/{{ my_user.username }}/{{ my_user.id }}/scores">Scores</a></li>
                     <li class="nav-item"><a class="nav-link" href="/{{ my_user.username }}/summary">Summary</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/login">Logout</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/edit_user/{{ my_user.id }}">Edit Profile</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
                 </ul>
             </div>
         </div>
@@ -29,16 +32,17 @@
         <div class="container mt-4 card">
             <h4 class="text-center mt-3 mb-3">Quiz Scores</h4>
             {% if scores %}
-            <div class="overflow-auto" style="max-height:540px">
+            <div class="overflow-auto" style="max-height:482px">
                 <table class="table">
-                    <thead class=" text-center rounded-3" >
+                    <thead class=" text-center rounded-3 " >
                         <tr >
                             
-                            <th class="rounded-start bg-primary bg-gradient text-white">Index</th>
-                            <th class="bg-primary bg-gradient text-white">Quiz Name</th>
-                            <th class="bg-primary bg-gradient text-white">No. of Questions</th>
-                            <th class="bg-primary bg-gradient text-white">Date</th>
-                            <th class="rounded-end bg-primary bg-gradient text-white">Scores</th>
+                            <th class="rounded-start custom-header text-white">Index</th>
+                            <th class=" text-white custom-header">Quiz Name</th>
+                            <th class=" text-white custom-header">No. of Questions</th>
+                            <th class=" text-white custom-header">Date</th>
+                            <th class=" text-white custom-header">Scores</th>
+                            <th class="rounded-end custom-header text-white">Actions</th>
                             
                         </tr>
                     </thead>
@@ -49,7 +53,13 @@
                             <td>{{ score.quiz.quiz_name }}</td>
                             <td>{{ score.quiz.questions|length }}</td>
                             <td>{{ score.attempt_date.strftime('%d/%m/%Y')}}</td>
-                            <td>{{ score.total_score }}/{{ score.quiz.questions|length }}</td>
+                            <td>{{ score.total_score }} %</td>
+                            <td>
+                                <a class="btn btn-sm btn-outline-success"
+                                    href="/quiz_result/{{ my_user.username }}/{{ my_user.id }}/quiz/{{ score.q_id }}/score/{{ score.id }}">
+                                    View Result
+                                </a>
+                            </td>                              
                         </tr>
                         {% endfor %}
                     </tbody>
@@ -63,6 +73,6 @@
         </div>
         
     </div>
-    <div class="text-center mt-4"><a href="/home/{{ my_user.username }}/{{ my_user.id }}" class="btn btn-outline-danger">Back to Dashboard</a></div>
+    <div class="text-center mt-4 mb-3"><a href="/home/{{ my_user.username }}/{{ my_user.id }}" class="btn btn-outline-danger">Back to Dashboard</a></div>
 </body>
 </html>
