--- a/templates/user_dash.html
+++ b/templates/user_dash.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>User Dashboard</title>
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/admin_dash.css">
 </head>
@@ -14,7 +15,8 @@
                     <li class="nav-item"><a class="nav-link" href="/home/{{ my_user.username }}/{{ my_user.id }}">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="/{{ my_user.username }}/{{ my_user.id }}/scores">Scores</a></li>
                     <li class="nav-item"><a class="nav-link" href="/{{ my_user.username }}/summary">Summary</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/login">Logout</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/edit_user/{{ my_user.id }}">Edit Profile</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
                 </ul>
             </div>
         </div>
@@ -22,25 +24,34 @@
     <div class="container mt-4">
         <div class="dash-header d-flex justify-content-between align-items-center p-3 border-buttom">
             <form action="/user/search/{{ my_user.id }}" class="d-flex gap-2 w-30">
-            <input type="text" class="form-control rounded-pill" placeholder="Search" name="search">
+            <input type="text" class="form-control rounded-pill" placeholder="Search" name="search" value="{{ search_query if search_query else '' }}">
             <select name="option"  class="form-select w-auto rounded-pill">
-                <option selected>Select</option>
-                <option value="sub">Subject</option>
-                <option value="chap">Chapter</option>
-                <option value="quiz">Quiz</option>
+                <option disabled {% if not search_option %}selected{% endif %}>Select</option>
+                <option value="sub" {% if search_option == 'sub' %}selected{% endif %}>Subject</option>
+                <option value="chap" {% if search_option == 'chap' %}selected{% endif %}>Chapter</option>
+                <option value="quiz" {% if search_option == 'quiz' %}selected{% endif %}>Quiz</option>
                 <input type="submit" value="Search" class="btn btn-outline-success rounded-pill px-4">
             </select>
+            {% if search_query %}
+                <a href="/home/{{ my_user.username }}/{{ my_user.id }}" class="btn btn-outline-danger rounded-pill px-4">Clear</a>
+            {% endif %}
             </form>
             <span class="fw-bold text-primary">Welcome {{my_user.username}}</span>
         </div>
 
         <div class="container mt-4 card">
-            <h4 class="text-center mt-3 mb-3">Upcomming Quizzes</h4>
+            {% if not search_query %}
+                <h2 class="text-center mt-2 mb-2">All the Quizzes</h2>
+            {% else %}
+                <h2 class="text-center mt-2 mb-2">Searched Results</h2>
+            {% endif %}
             {% if quizzes %}
             <table >
-                <thead class="bg-primary text-center rounded-3 text-white" style="height: 40px;">
+                <thead class="custom-header text-center rounded-3 text-white" style="height: 40px;">
                     <tr >
                         <th class="rounded-start">ID</th>
+                        <th>Subject Name</th>
+                        <th>Chapter Name</th>
                         <th>Quiz Name</th>
                         <th>No. of Questions</th>
                         <th>Date</th>
@@ -52,6 +63,8 @@
                     {% for quiz in quizzes %}
                     <tr class="text-center p-4 align-middle" style="height: 40px;">
                         <td>{{ quiz.quiz_id }}</td>
+                        <td>{{ quiz.chapter.subject.sub_name }}</td>
+                        <td>{{ quiz.chapter.chap_name }}</td>
                         <td>{{ quiz.quiz_name }}</td>
                         <td>{{ quiz.questions|length }}</td>
                         <td>{{ quiz.date_of_quiz.strftime('%d/%m/%Y') }}</td>
@@ -66,7 +79,15 @@
                 
             </table>
             {% else %}
-            <p class="text-center text-danger">No upcomming quizzes available.</p>
+                {% if search_option == 'sub' %}
+                <h5 class="text-center text-danger">No subjects matched your search. Try checking for typos or using simpler keywords.</h5>
+                {% elif search_option == 'chap' %}
+                <h5 class="text-center text-danger">No chapters matched your search. Try checking for typos or using simpler keywords.</h5>
+                {% elif search_option == 'quiz' %}
+                <h5 class="text-center text-danger">No quizzes matched your search. Try checking for typos or using simpler keywords.</h5>
+                {% else %}
+                <h5 class="text-center text-danger">No upcomming quizzes available.</h5>
+                {% endif %}
             {% endif %}
         </div>
     </div>
