--- a/templates/user_manage.html
+++ b/templates/user_manage.html
@@ -1,77 +1,122 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>User Management</title>
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/admin_dash.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg bg-dark">
         <div class="container">
-            <h6 class="navbar-brand text-white mt-2 " >Admin Dashboard</h6>
+            <h6 class="navbar-brand text-white mt-2">Admin Dashboard</h6>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="/admin">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/users_manage">Users</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/admin/summary">Summary</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/login">Logout</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="/admin">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="/users_manage">Users</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="/admin/summary">Summary</a></li>
+                    <li class="nav-item"><a class="nav-link text-white" href="/logout">Logout</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="container mt-4 card">
+
+    <div class="container mt-4">
+
         
-        <div class="overflow-auto" style="max-height: 545px;">
-            <div class="row mt-4">
-                <div class="col-md-12">
-                    <div class=" p-3" >
-                        <h3 class="text-center">All Users</h3>
-                        <div class="overflow-auto" style="max-height: 500px;">
-                            <table class="table">
-                                <thead>
-                                    <tr class="text-center">
-                                        <th class="rounded-start bg-primary bg-gradient text-white">ID</th>
-                                        <th class="bg-primary bg-gradient text-white">Username</th>
-                                        <th class="bg-primary bg-gradient text-white">Email</th>
-                                        <th class="bg-primary bg-gradient text-white">Full Name</th>
-                                        <th class="bg-primary bg-gradient text-white">Qualification</th>
-                                        <th class="bg-primary bg-gradient text-white">Date Of Birth</th>
-                                        <th class="rounded-end bg-primary bg-gradient text-white">Actions</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    {% for user in users %}
-                                    <tr class="text-center">
-                                        <td>{{ user.id }}</td>
-                                        <td>{{ user.username}}</td>
-                                        <td>{{ user.email}}</td>
-                                        <td>{{ user.full_name}}</td>
-                                        <td>{{ user.qualification }}</td>
-                                        <td>{{ user.dob }}</td>
-                                        <td>
-                                        <a class="btn btn-sm btn-outline-dark" href="/edit_user/{{ user.id }}">Edit</a>
-                                        <a class="btn btn-sm btn-outline-danger" href="{{ url_for('delete_user', user_id = user.id) }}">Remove</a>
-                                        </td>
-                                    </tr>
-                                    {% endfor %}
-                                </tbody>
-                            </table>
-                        </div>
-                        
-                        <div class="text-center mt-4 text-danger rounded">
-                            <h4>All users listed here</h4>
-                        </div>
-                        
-                    </div>
-                    
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div class="alert alert-{{ category }} text-center">{{ message }}</div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+
+        <div class="card p-3">
+            {% if search %}
+                <h2 class="text-center mb-3">All searched User</h2>
+            {% else %}
+                <h2 class="text-center mb-3">All Registered Users</h2>
+            {% endif %}
+
+            {% if users %}
+                <div class="overflow-auto" style="max-height: 540px;">
+                    <table class="table text-center">
+                        <thead>
+                            <tr >
+                                <th class="rounded-start custom-header text-white">ID</th>
+                                <th class="text-white custom-header">Username</th>
+                                <th class="text-white custom-header">Email</th>
+                                <th class="text-white custom-header">Full Name</th>
+                                <th class="text-white custom-header">Qualification</th>
+                                <th class="text-white custom-header">DOB</th>
+                                <th class="text-white custom-header">Status</th>
+                                <th class="rounded-end custom-header text-white">Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for user in users %}
+                            <tr class="align-middle">
+                                <td class="rounded-start">{{ user.id }}</td>
+                                <td>{{ user.username }}</td>
+                                <td>{{ user.email }}</td>
+                                <td>{{ user.full_name }}</td>
+                                <td>{{ user.qualification }}</td>
+                                <td>{{ user.dob.strftime("%d/%m/%Y") }}</td>
+                                <td>
+                                    {% if user.is_locked %}
+                                        <span class="badge bg-danger">Locked</span>
+                                    {% else %}
+                                        <span class="badge bg-success">Active</span>
+                                    {% endif %}
+                                </td>
+                                <td class="rounded-end">
+                                    <div class="d-flex justify-content-center gap-2">
+                                        <a class="btn btn-sm btn-outline-danger"
+                                            href="{% if search %}{{ url_for('delete_user', user_id=user.id, search=search, option='user') }}{% else %}{{ url_for('delete_user', user_id=user.id) }}{% endif %}">
+                                            Remove
+                                        </a>
+
+                                
+                                        {% if user.is_locked %}
+                                            {% if search %}
+                                            <form action="{{ url_for('unlock_user', user_id=user.id) }}?search={{ search }}&option=user" method="post">
+                                            {% else %}
+                                            <form action="{{ url_for('unlock_user', user_id=user.id) }}" method="post">
+                                            {% endif %}
+                                                <button type="submit" class="btn btn-sm btn-outline-success">Unlock</button>
+                                            </form>
+                                        {% endif %}
+                                    </div>
+                                </td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
                 </div>
-                
-            </div>
+                {% if search %}
+                    <div class="text-center mt-4 text-danger rounded">
+                        <h4>Searched users listed here</h4>
+                    </div>
+                {% else %}
+                    <div class="text-center mt-4 text-danger rounded">
+                        <h4>All users listed here</h4>
+                    </div>
+                {% endif %}
+            {% else %}
+                {% if search %}
+                    <h4 class="text-center text-danger">No Users found. Try checking for typos or using simpler keywords.</h4>
+                {% else %}
+                    <h4 class="text-center text-danger">No Users available.</h4>
+                {% endif %}
+            {% endif %}
+
             
         </div>
-    </div>
-    <div class="text-center mt-3">
-        <a href="/admin" class="btn btn-outline-danger">Back to Dashboard</a>
+
+        <div class="text-center mt-3">
+            <a href="/admin" class="btn btn-outline-danger mb-3">Back to Dashboard</a>
+        </div>
     </div>
 </body>
 </html>
