--- a/templates/view_quiz.html
+++ b/templates/view_quiz.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>View Quiz</title>
+    <link rel="icon" href="/static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/admin_dash.css">
 </head>
@@ -13,8 +14,9 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="/home/{{ my_user.username }}/{{ my_user.id }}">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="/scores/{{ my_user.id }}">Scores</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Summary</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/login">Logout</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/{{ my_user.username }}/summary">Summary</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/edit_user/{{ my_user.id }}">Edit Profile</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
                 </ul>
             </div>
         </div>
@@ -34,8 +36,16 @@
                         <td> {{ quiz.chapter.subject.sub_name }} </td>
                     </tr>
                     <tr>
+                        <th >Subject Description:</th>
+                        <td> {{ quiz.chapter.subject.sub_description }} </td>
+                    </tr>
+                    <tr>
                         <th >Chapter:</th>
                         <td> {{ quiz.chapter.chap_name }} </td>
+                    </tr>
+                    <tr>
+                        <th >Chapter Description:</th>
+                        <td> {{ quiz.chapter.chap_description }} </td>
                     </tr>
                     <tr>
                         <th >Total Questions:</th>
